src/test/test-models/bad/declare-define-param-block.stan
data {
  real d_r;
}
parameters {
  real y;
  real z = d_r;
}
model {
  y ~ normal(0,1);
}
